--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,400;0,600;0,800;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600;700&display=swap');
 
 :root {
-  font-family: 'Azeret Mono', monospace;
+  font-family: 'Azeret Mono', 'Roboto Mono', monospace;
 
   --color-bg: #F5FCFD;
   --color-text: #061D22;
